gcc/testsuite/gdc.test/compilable/test13053.d
// PERMUTE_ARGS: -w -wi
/*
TEST_OUTPUT:
---
---
*/

@system:

struct S
{
    int[] a;
}
